--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "face_recog",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://tudor96.github.io/face_recognition",
   "dependencies": {
     "clarifai": "^2.9.0",
     "clarify": "^2.1.0",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
